# traxon_core

./: .gitignore  README.md  pyproject.toml
tests/: test_config.py  test_dates.py  test_floats.py
tests/logs/notifiers/: test_notifiers_telegram.py
tests/unit/: test_api_exports.py  test_dates.py  test_decimals.py  test_exchange_calendar.py  test_packaging.py  test_trading_dates.py  test_type_discovery.py
tests/unit/config/: test_config.py
tests/unit/crypto/: test_utils.py
tests/unit/crypto/data_fetchers/: test_market_fetcher.py  test_portfolio_fetcher.py  test_prices.py
tests/unit/crypto/exchanges/: test_exchange.py
tests/unit/crypto/models/: test_balance.py  test_instrument.py  test_market_info.py  test_order.py  test_order_pairing.py  test_orders_to_execute.py  test_portfolio_model.py  test_portfolio_schema.py  test_position.py  test_symbol.py
tests/unit/crypto/order_executor/: test_config.py  test_default_executor_refactor.py  test_event_bus.py  test_models.py  test_order_router.py  test_rejection_classifier.py  test_reprice_policy.py  test_rest_executor.py  test_session.py  (+2 more)
tests/unit/logs/: test_logger.py
tests/unit/order_executor/: test_default_executor_refactor.py
traxon_core/: __init__.py  dates.py  decimals.py  errors.py  exchange_calendar.py  floats.py  trading_dates.py
traxon_core/config/: __init__.py
traxon_core/config/notifiers/: telegram.py
traxon_core/crypto/: utils.py
traxon_core/crypto/data_fetchers/: __init__.py  base.py  equity.py  market.py  portfolio.py  prices.py
traxon_core/crypto/exchanges/: __init__.py  config.py  exchange.py
traxon_core/crypto/models/: __init__.py  balance.py  instrument.py  market.py  market_info.py  order.py  portfolio.py  position.py  price.py  symbol.py
traxon_core/crypto/order_executor/: __init__.py  base.py  config.py  default_executor.py  event_bus.py  models.py  rejection.py  reprice.py  rest.py  router.py  session.py  ws.py
traxon_core/logs/: logger.py  push.py  structlog.py
traxon_core/logs/notifiers/: __init__.py  telegram.py
traxon_core/order_executor/: __init__.py  base.py  config.py  default_executor.py  exceptions.py  models.py  rest.py  ws.py
traxon_core/persistence/: __init__.py  config.py  duckdb.py
traxon_core/persistence/cache/: __init__.py  config.py  disk.py  factory.py  redis.py
traxon_core/persistence/db/: __init__.py  base.py  config.py  duckdb.py  factory.py  postgres.py
(+65 files in other folders)
